--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ html{
     body{
         font-size: 1rem;
         background-image: url("assets/\(n\)\ 1.png");
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        background-attachment: fixed;
+        
     }
 
     .container{
