--- a/style.css
+++ b/style.css
@@ -7,23 +7,20 @@ html{
 
     }
 
-    .container{
-        width: auto;
-        height: auto;
+    .card{
+        background-color: rgb(76, 1, 146);
         padding: 20px;
-        border: 1cm solid brown;
-        margin: auto;
-
+        border-radius: 20px;
+        box-shadow: 0px 4px 10px rgb(18, 1, 34);
+        text-align: center;
+        color: white;
     }
-
-    .box{
-        width: auto;
-        height: auto;
-        font-size: 12pt;
-        border: 2mm dashed lawngreen;
+    .container{
+        background-color: rgb(0, 106, 155);
+        padding: 20px;
+        border-radius: 20px;
+        box-shadow: 0px 4px 10px rgb(1, 24, 34);
+        text-align: center;
+        color: orange;
     }
-
-    .tittle{
-        color: red;
-        background-color: rgb(15, 187, 29);
-    }
+    
