--- a/style.css
+++ b/style.css
@@ -3,17 +3,16 @@ html{
 }
     body{
         font-size: 1rem;
-        background-color: aquamarine;
-
+        background-image: url("assets/fondo 2.jpg");
     }
 
     .card{
-        background-color: rgb(76, 1, 146);
+        background-color: white;
         padding: 20px;
         border-radius: 20px;
         box-shadow: 0px 4px 10px rgb(18, 1, 34);
         text-align: center;
-        color: white;
+        color: black;
     }
     .container{
         background-color: rgb(0, 106, 155);
